style lia-script and bug fixes

--- a/src/scss/03_elements/_elements.label.scss
+++ b/src/scss/03_elements/_elements.label.scss
@@ -1,6 +1,7 @@
 .lia-label {
-  display: inline-flex;
   align-items: center;
+  display: inline-flex;
+  width: max-content;
 
   > .lia-radio,
   > .lia-checkbox {
