--- a/src/scss/05_components/_components.slide.scss
+++ b/src/scss/05_components/_components.slide.scss
@@ -28,7 +28,7 @@
     height: 100%;
     margin-top: calc(#{$header-height-mobile});
     max-width: 144rem;
-    overflow: hidden auto;
+    overflow: auto;
     padding: 0 3rem;
     position: relative;
     width: 100%;
