--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -66,6 +66,7 @@
 @import "06_utilities/utilities.clearfix";
 @import "06_utilities/utilities.colors";
 @import "06_utilities/utilities.display";
+@import "06_utilities/utilities.flex";
 @import "06_utilities/utilities.headless";
 @import "06_utilities/utilities.headline";
 @import "06_utilities/utilities.hidden";
