--- a/src/scss/02_generic/_generic.shared.scss
+++ b/src/scss/02_generic/_generic.shared.scss
@@ -20,13 +20,17 @@ fieldset {
   box-shadow: 0 0 0 0.25rem rgba(var(--color-highlight), 0.15) !important;
 }
 
+button,
 .lia-btn,
+input,
 .lia-input,
+select,
 .lia-select,
+textarea,
 .lia-textarea,
 .lia-dropdown {
-  -moz-appearance: none;
-  -webkit-appearance: none;
+  //-moz-appearance: none;
+  //-webkit-appearance: none;
   align-items: center;
   border-radius: $global-radius;
   border: 1px solid transparent;
