--- a/src/scss/03_elements/_elements.button.scss
+++ b/src/scss/03_elements/_elements.button.scss
@@ -8,7 +8,7 @@ $btn-height: 3.6rem;
   color: rgb(var(--lia-white));
   display: inline-flex;
   line-height: $global-line-height;
-  padding: 0.5rem 0.6rem 0.5rem 0.6rem;
+  padding: 0.5rem 0.6rem;
 
   &--warning {
     background-color: rgb(var(--lia-yellow));
