--- a/src/scss/05_components/_components.card.scss
+++ b/src/scss/05_components/_components.card.scss
@@ -4,8 +4,9 @@
   display: flex;
   flex-direction: column;
   position: relative;
+  color: black;
 
-  @include breakpoint-only("sm", "md") {
+  @include breakpoint-only('sm', 'md') {
     display: grid;
     grid-template-columns: 40% 1fr;
   }
@@ -24,7 +25,7 @@
     height: 100%;
     padding: 2rem 0;
 
-    @include breakpoint-only("sm", "md") {
+    @include breakpoint-only('sm', 'md') {
       margin-top: 4rem;
       height: auto;
       padding-top: 0;
@@ -32,7 +33,7 @@
   }
 
   &__aside {
-    @include breakpoint-only("sm", "md") {
+    @include breakpoint-only('sm', 'md') {
       height: 100%;
     }
   }
@@ -42,7 +43,7 @@
     height: 20rem;
     width: 100%;
 
-    @include breakpoint-only("sm", "md") {
+    @include breakpoint-only('sm', 'md') {
       height: 100%;
     }
   }
@@ -76,7 +77,7 @@
     &:before {
       background-color: rgb(var(--lia-turquoise));
       bottom: -0.5rem;
-      content: "";
+      content: '';
       height: 1px;
       position: absolute;
       width: 80%;
