improve(Gallery): Add zoom/overlay functionality
Multi-line description of commit,
feel free to be detailed.

[Issue: X]

--- a/src/scss/05_components/_components.gallery.scss
+++ b/src/scss/05_components/_components.gallery.scss
@@ -19,6 +19,18 @@
         object-fit: cover;
         width: 100%;
       }
+
+      video {
+        height: 100%;
+        object-fit: cover;
+        width: 100%;
+      }
+
+      div {
+        height: 100%;
+        object-fit: cover;
+        width: 100%;
+      }
     }
   }
 
