--- a/src/scss/05_components/_components.toc.scss
+++ b/src/scss/05_components/_components.toc.scss
@@ -22,11 +22,11 @@
     transform: translate(6.5rem, -50%);
     transition: $global-transition;
 
-    @include breakpoint("sm", "max") {
+    @include breakpoint('sm', 'max') {
       transform: translate(-3rem, -50%);
     }
 
-    @include breakpoint("md", "max") {
+    @include breakpoint('md', 'max') {
       top: calc(
         (#{$header-height-mobile} / 2) +
           (
@@ -36,7 +36,7 @@
     }
   }
 
-  @include breakpoint("sm") {
+  @include breakpoint('sm') {
     width: $toc-width-desktop;
   }
 
@@ -48,7 +48,7 @@
     }
   }
 
-  @include breakpoint("sm", "max") {
+  @include breakpoint('sm', 'max') {
     padding-top: 6rem;
   }
 
@@ -58,7 +58,7 @@
     display: inline-block;
 
     input {
-      background-color: rgb(var(--lia-grey-light));
+      background-color: rgba(var(--lia-grey-light), 0.1);
       padding-left: 3rem;
       padding-right: 3.75rem;
       transition: left 250ms ease-in-out;
@@ -105,7 +105,7 @@
 
         &:before {
           bottom: 0.5rem;
-          content: "";
+          content: '';
           position: absolute;
           left: 0;
           top: 0.5rem;
@@ -127,7 +127,7 @@
           position: relative;
 
           &:after {
-            content: "";
+            content: '';
             background-color: rgb(var(--lia-grey-light));
             display: inline-block;
             height: 1px;
@@ -166,7 +166,7 @@
     }
 
     &:after {
-      content: "";
+      content: '';
       background-color: rgb(var(--lia-grey-light));
       display: inline-block;
       height: 1px;
@@ -180,12 +180,12 @@
 
 /* Theming */
 
-html:not([class*="lia-theme-default"]) {
+html:not([class*='lia-theme-default']) {
   .lia-toc--visible {
     #lia-btn-toc {
       color: rgb(var(--lia-white));
 
-      @include breakpoint("sm") {
+      @include breakpoint('sm') {
         color: rgb(var(--color-highlight));
       }
     }
