style(Script): Adds background to scripts
The background color is used to indicate that this piece of content is
generated by a script, which can be inspected via a double click. The
border shows that this element has an input too...

--- a/src/scss/05_components/_components.script.scss
+++ b/src/scss/05_components/_components.script.scss
@@ -3,6 +3,7 @@
   display: inline-flex;
   overflow: hidden;
   vertical-align: middle;
+  background-color: rgba(var(--color-highlight), 0.1);
 
   &--with-border {
     border: 1px solid rgb(var(--color-highlight));
@@ -43,7 +44,7 @@
     border-left: 1px solid rgb(var(--color-highlight));
     color: rgb(var(--lia-white));
     display: flex;
-    padding: 0.5rem 1.6rem;
+    padding: 0rem 0.5rem;
     width: 100%;
 
     i {
@@ -53,7 +54,7 @@
 }
 
 output.lia-script {
-  padding: 0.5rem 1.6rem;
+  padding: 0rem 0.5rem;
   cursor: pointer;
 
   i {
