fix(Style): Overlong labels with Quizzes & Tasks
Overlong labels were not broken, but instead only presented in one very
long line. This fix allows line-breaks and additionally sets a min-width
for checkboxes and radio-buttons.

--- a/src/scss/03_elements/_elements.label.scss
+++ b/src/scss/03_elements/_elements.label.scss
@@ -1,10 +1,11 @@
 .lia-label {
   align-items: center;
   display: inline-flex;
-  width: max-content;
+  //width: max-content;
 
   > .lia-radio,
   > .lia-checkbox {
     margin-right: 1rem;
+    min-width: 2.4rem;
   }
 }
