--- a/src/scss/03_elements/_elements.list.scss
+++ b/src/scss/03_elements/_elements.list.scss
@@ -16,9 +16,9 @@
 
     > li {
       &:before {
-        content: "\EA0D";
+        content: '\EA0D';
         color: rgb(var(--color-highlight-dark));
-        font-family: "icon";
+        font-family: 'icon';
         left: 0;
         position: absolute;
       }
@@ -31,7 +31,7 @@
     ul li ul li {
       padding-left: 1rem;
       &:before {
-        content: "\EA21";
+        content: '\EA21';
       }
     }
   }
@@ -42,13 +42,9 @@
         color: rgb(var(--color-highlight-dark));
       }
 
-      span {
+      > * {
         left: 1rem;
         position: relative;
-
-        > p {
-          display: inline-block;
-        }
       }
     }
   }
