fix: font, embedded videos, cleanup
serif font support, local videos are now responsive, removed _theme folder (deprecated)

--- a/src/scss/00_settings/_settings.fonts.scss
+++ b/src/scss/00_settings/_settings.fonts.scss
@@ -69,7 +69,7 @@
 
 /* source-serif-pro semibold */
 @font-face {
-  font-family: "Source Serif Pro";
+  font-family: "LiaSourceSerifPro";
   font-style: normal;
   font-weight: 600;
   src: url("../assets/fonts/source-serif-pro/source-serif-pro-v10-latin-600.eot"); /* IE9 Compat Modes */
@@ -92,7 +92,7 @@
 
 /* source-serif-pro bold */
 @font-face {
-  font-family: "Source Serif Pro";
+  font-family: "LiaSourceSerifPro";
   font-style: normal;
   font-weight: 700;
   src: url("../assets/fonts/source-serif-pro/source-serif-pro-v10-latin-700.eot"); /* IE9 Compat Modes */
