--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -47,6 +47,7 @@
 @import "05_components/components.effect";
 @import "05_components/components.gallery";
 @import "05_components/components.header";
+@import "05_components/components.modal";
 @import "05_components/components.nav";
 @import "05_components/components.notes";
 @import "05_components/components.pagination";
