--- a/src/scss/05_components/_components.modal.scss
+++ b/src/scss/05_components/_components.modal.scss
@@ -1,3 +1,5 @@
+$controlHeight: 4rem;
+
 .lia-modal {
   top: 0;
   left: 0;
@@ -13,7 +15,7 @@
   color: white;
 
   &__outer {
-    background-color: rgba(var(--lia-grey-dark), 0.9);
+    background-color: rgba(0, 0, 0, 0.9);
     width: 100vw;
     height: 100vh;
     position: absolute;
@@ -22,23 +24,37 @@
   &__inner {
     display: flex;
     flex-direction: column;
-    height: 100%;
     justify-content: center;
     overflow-y: auto;
     position: absolute;
+    height: 100%;
+    max-height: 100%;
+
+    @include breakpoint("sm") {
+      height: auto;
+    }
+  }
+
+  &__close,
+  &__controls {
+    padding: 0 0.5rem;
   }
 
   &__close {
-    margin: 1rem 0;
+    height: $controlHeight;
     position: sticky;
     text-align: right;
     top: 0;
     width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
 
     @include breakpoint("sm") {
       position: absolute;
-      top: 1rem;
+      top: 0.5rem;
       right: 1rem;
+      margin: 0;
     }
   }
 
@@ -49,6 +65,7 @@
     font-size: 2rem;
     justify-content: space-between;
     width: 100%;
+    height: $controlHeight;
 
     @include breakpoint("sm") {
       position: absolute;
@@ -95,7 +112,7 @@
       }
 
       figcaption {
-        padding: 0 0.6rem;
+        padding: 0 1rem;
         max-width: fit-content;
 
         @include breakpoint("sm") {
@@ -112,12 +129,14 @@
 
       video {
         position: relative;
-        height: auto;
+        //height: auto;
+        width: auto;
+        max-height: calc(100vh - (2 * #{$controlHeight}));
       }
     }
 
     @include breakpoint("sm") {
-      margin: 1rem 5rem 2rem;
+      margin: 1rem 5rem;
 
       figcaption {
         padding: 0;
