--- a/src/scss/05_components/_components.quiz.scss
+++ b/src/scss/05_components/_components.quiz.scss
@@ -13,6 +13,15 @@
     }
   }
 
+  &__warning {
+    display: block;
+    color: rgb(var(--lia-red));
+    background-color: rgba(var(--lia-yellow), 0.1);
+
+    padding: 1rem 1rem;
+    border-radius: 0.8rem;
+  }
+
   &__control {
     display: flex;
     align-items: center;
@@ -22,7 +31,7 @@
       margin-right: 1rem;
     }
 
-    @include breakpoint("md") {
+    @include breakpoint('md') {
       grid-column-start: 2;
     }
   }
@@ -85,7 +94,7 @@
   }
 
   // make sure that any kind of list has no indenting
-  [class^="lia-list"] {
+  [class^='lia-list'] {
     margin-left: 0;
   }
 }
