--- a/src/scss/03_elements/_elements.media.scss
+++ b/src/scss/03_elements/_elements.media.scss
@@ -15,12 +15,25 @@ figure {
   }
 }
 
-.lia-video-wrapper {
+.lia-video-wrapper,
+.lia-iframe-wrapper {
   position: relative;
   padding-bottom: 56.25%;
   height: 0;
+}
 
-  iframe,
+.lia-iframe-wrapper {
+  iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
+  }
+}
+
+.lia-video-wrapper {
   video {
     position: absolute;
     top: 0;
