--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -46,6 +46,7 @@
 @import "05_components/components.dropdown";
 @import "05_components/components.effect";
 @import "05_components/components.gallery";
+@import "05_components/components.google-translate";
 @import "05_components/components.header";
 @import "05_components/components.modal";
 @import "05_components/components.nav";
