--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -48,6 +48,7 @@
 @import "05_components/components.gallery";
 @import "05_components/components.google-translate";
 @import "05_components/components.header";
+@import "05_components/components.lightbox";
 @import "05_components/components.modal";
 @import "05_components/components.nav";
 @import "05_components/components.notes";
