--- a/src/scss/04_objects/_object.canvas.scss
+++ b/src/scss/04_objects/_object.canvas.scss
@@ -25,6 +25,7 @@ $slide-margin-left-textbook: 19rem !default;
   left: 0;
   position: relative;
   transition: $global-transition;
+  transition-property: left, right, width;
   width: 100vw;
   overflow-x: hidden;
 
