--- a/src/scss/00_settings/_settings.typography.scss
+++ b/src/scss/00_settings/_settings.typography.scss
@@ -5,7 +5,9 @@ html {
 body {
   background-color: rgb(var(--color-background));
   color: rgb(var(--color-text));
-  font-size: var(--global-font-size, $global-font-size);
+  font-size: calc(
+    var(--global-font-size, $global-font-size) * var(--font-size-multiplier)
+  );
   font-weight: 400;
   line-height: $global-line-height;
 }
