--- a/src/scss/03_elements/_elements.headline.scss
+++ b/src/scss/03_elements/_elements.headline.scss
@@ -37,34 +37,34 @@ h5 {
 }
 
 h1 {
-  font-size: $h1-mobile;
+  font-size: calc(#{$h1-mobile} * var(--font-size-multiplier));
 
   @include breakpoint("md") {
-    font-size: $h1-desktop-presentation;
+    font-size: calc(#{$h1-desktop-presentation} * var(--font-size-multiplier));
 
     @at-root .lia-mode--textbook & {
-      font-size: $h1-desktop-textbook;
+      font-size: calc(#{$h1-desktop-textbook} * var(--font-size-multiplier));
     }
   }
 }
 
 h2 {
-  font-size: $h2-mobile;
+  font-size: calc(#{$h2-mobile} * var(--font-size-multiplier));
 
   @include breakpoint("md") {
-    font-size: $h2-desktop;
+    font-size: calc(#{$h2-desktop} * var(--font-size-multiplier));
   }
 }
 
 h3 {
-  font-size: $h3-mobile;
+  font-size: calc(#{$h3-desktop} * var(--font-size-multiplier));
 
   @include breakpoint("md") {
-    font-size: $h3-desktop;
+    font-size: calc(#{$h3-desktop} * var(--font-size-multiplier));
   }
 }
 
 h4,
 h5 {
-  font-size: $h4-mobile;
+  font-size: calc(#{$h4-mobile} * var(--font-size-multiplier));
 }
