--- a/src/scss/05_components/_components.toc.scss
+++ b/src/scss/05_components/_components.toc.scss
@@ -8,11 +8,13 @@
   padding: 3rem 0 1rem 0;
   position: fixed;
   transition: $global-transition;
+  transition-property: left, width;
   width: $toc-width-mobile;
   z-index: 200;
 
   #lia-btn-toc {
     color: rgb(var(--color-highlight));
+    font-size: 2rem;
     position: absolute;
     top: calc(
       (#{$header-height-desktop} / 2) +
@@ -22,11 +24,11 @@
     transform: translate(6.5rem, -50%);
     transition: $global-transition;
 
-    @include breakpoint('sm', 'max') {
+    @include breakpoint("sm", "max") {
       transform: translate(-3rem, -50%);
     }
 
-    @include breakpoint('md', 'max') {
+    @include breakpoint("md", "max") {
       top: calc(
         (#{$header-height-mobile} / 2) +
           (
@@ -36,7 +38,7 @@
     }
   }
 
-  @include breakpoint('sm') {
+  @include breakpoint("sm") {
     width: $toc-width-desktop;
   }
 
@@ -48,7 +50,7 @@
     }
   }
 
-  @include breakpoint('sm', 'max') {
+  @include breakpoint("sm", "max") {
     padding-top: 6rem;
   }
 
@@ -105,7 +107,7 @@
 
         &:before {
           bottom: 0.5rem;
-          content: '';
+          content: "";
           position: absolute;
           left: 0;
           top: 0.5rem;
@@ -116,18 +118,18 @@
 
       &.lia-toc__link--is-lvl- {
         &1 {
-          font-size: 2rem;
+          font-size: calc(2rem * var(--font-size-multiplier));
           font-weight: 700;
         }
 
         &2 {
           font-weight: 600;
-          font-size: 1.7rem;
+          font-size: calc(1.7rem * var(--font-size-multiplier));
           padding-left: $global-font-size + 3rem;
           position: relative;
 
           &:after {
-            content: '';
+            content: "";
             background-color: rgb(var(--lia-grey-light));
             display: inline-block;
             height: 1px;
@@ -166,7 +168,7 @@
     }
 
     &:after {
-      content: '';
+      content: "";
       background-color: rgb(var(--lia-grey-light));
       display: inline-block;
       height: 1px;
@@ -180,12 +182,12 @@
 
 /* Theming */
 
-html:not([class*='lia-theme-default']) {
+html:not([class*="lia-theme-default"]) {
   .lia-toc--visible {
     #lia-btn-toc {
       color: rgb(var(--lia-white));
 
-      @include breakpoint('sm') {
+      @include breakpoint("sm") {
         color: rgb(var(--color-highlight));
       }
     }
