--- a/src/scss/05_components/_components.script.scss
+++ b/src/scss/05_components/_components.script.scss
@@ -36,6 +36,29 @@
   textarea {
     border: none;
     border-radius: 0;
+    background-color: transparent;
+  }
+
+  input[type="color"] {
+    width: 10rem;
+    height: auto;
+    -webkit-appearance: none;
+    border: none;
+
+    &::-webkit-color-swatch-wrapper {
+      padding: 0;
+    }
+
+    &::-webkit-color-swatch {
+      border: none;
+    }
+  }
+
+  textarea {
+    min-width: 25vw;
+    max-width: 50vw;
+    resize: vertical;
+    min-height: 5rem;
   }
 
   output {
