--- a/src/scss/05_components/_components.effect.scss
+++ b/src/scss/05_components/_components.effect.scss
@@ -4,16 +4,17 @@
   }
 
   &__circle {
-    border-radius: 100%;
-    border: 1px solid rgb(var(--color-highlight));
-    color: rgb(var(--color-highlight));
+    background-color: rgb(var(--color-highlight));
+    border-radius: 50%;
+    color: rgb(var(--lia-white));
     display: inline-block;
+    font-size: 1.5rem;
     font-weight: 400;
     height: 2rem;
-    transform: translateX(-124%);
+    line-height: 1.3;
     position: absolute;
     text-align: center;
-    line-height: 1.2;
+    transform: translateX(-124%);
     width: 2rem;
 
     &.animated {
