--- a/src/scss/05_components/_components.script.scss
+++ b/src/scss/05_components/_components.script.scss
@@ -24,6 +24,8 @@
   }
 
   > * {
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
     width: fit-content;
 
     &:not(:last-child) {
