--- a/src/scss/05_components/_components.support-menu.scss
+++ b/src/scss/05_components/_components.support-menu.scss
@@ -10,6 +10,9 @@
   top: 0;
   transition: $global-transition;
   transition-property: width, transform;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
   user-select: none;
   width: $support-width-mobile;
   z-index: 1;
