--- a/src/scss/05_components/_components.quote.scss
+++ b/src/scss/05_components/_components.quote.scss
@@ -12,7 +12,7 @@
 
   &__text {
     color: rgb(var(--color-highlight-dark));
-    font-family: 'LiaSourceSerifPro';
+    font-family: "LiaSourceSerifPro";
     font-weight: 600;
     font-size: 1.6rem;
     text-align: center;
@@ -20,7 +20,6 @@
 
   &__cite {
     display: block;
-    //font-style: normal;
     margin-top: 2rem;
     text-align: center;
   }
