--- a/src/scss/05_components/_components.toc.scss
+++ b/src/scss/05_components/_components.toc.scss
@@ -84,6 +84,9 @@
       top: 50%;
       transform-origin: center center;
       transform: translateY(-50%);
+      -webkit-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
       user-select: none;
       width: 3rem;
     }
@@ -93,7 +96,7 @@
     display: flex;
     flex-direction: column;
     overflow: auto;
-    margin-bottom: 1rem;
+    margin-bottom: auto;
 
     a {
       width: 100%;
@@ -160,6 +163,7 @@
   }
 
   &__bottom {
+    margin-top: 1rem;
     padding: 1rem 0 0 3rem;
     position: relative;
 
@@ -200,6 +204,22 @@ html:not([class*="lia-theme-default"]) {
     &__search {
       input {
         background-color: rgba(var(--lia-grey-light), 0.1);
+      }
+
+      input::-webkit-input-placeholder {
+        color: rgb(var(--lia-white));
+      }
+
+      input::-moz-placeholder {
+        color: rgb(var(--lia-white));
+      }
+
+      input:-ms-input-placeholder {
+        color: rgb(var(--lia-white));
+      }
+
+      input::-ms-input-placeholder {
+        color: rgb(var(--lia-white));
       }
 
       input,
