fix: font-family css variable and dropdown hover effect

--- a/src/scss/00_settings/_settings.typography.scss
+++ b/src/scss/00_settings/_settings.typography.scss
@@ -18,7 +18,7 @@ input,
 optgroup,
 select,
 textarea {
-  font-family: $global-font-family;
+  font-family: var(--global-font-family, $global-font-family);
 }
 
 a,
