--- a/src/scss/05_components/_components.modal.scss
+++ b/src/scss/05_components/_components.modal.scss
@@ -32,6 +32,7 @@ $controlHeight: 4rem;
 
   &__close,
   &__controls {
+    font-size: 3rem;
     padding: 0 0.5rem;
   }
 
@@ -40,6 +41,7 @@ $controlHeight: 4rem;
     display: flex;
     height: $controlHeight;
     justify-content: flex-end;
+    position: -webkit-sticky;
     position: sticky;
     text-align: right;
     top: 0;
@@ -57,7 +59,6 @@ $controlHeight: 4rem;
     color: white;
     display: flex;
     flex-direction: row-reverse;
-    font-size: 2rem;
     height: $controlHeight;
     justify-content: space-between;
     width: 100%;
@@ -101,7 +102,7 @@ $controlHeight: 4rem;
     }
 
     @include breakpoint("sm") {
-      margin: 1rem 5rem;
+      margin: 1rem 6rem;
       max-width: 100vw;
       width: calc(100vw - (2 * 5rem));
 
@@ -170,7 +171,7 @@ $controlHeight: 4rem;
     width: 100vw;
 
     @include breakpoint("sm") {
-      width: calc(100vw - (2 * 5rem));
+      width: calc(100vw - (2 * 6rem));
     }
   }
 }
