--- a/src/scss/03_elements/_elements.code.scss
+++ b/src/scss/03_elements/_elements.code.scss
@@ -94,4 +94,6 @@
   font-size: calc(
     var(--global-font-size, 1.5rem) * var(--font-size-multiplier)
   ) !important;
+
+  height: auto !important;
 }
