--- a/src/scss/06_utilities/_utilities.colors.scss
+++ b/src/scss/06_utilities/_utilities.colors.scss
@@ -11,3 +11,15 @@
     border: 1px solid rgb(var(--lia-#{$colorName}));
   }
 }
+
+.bg-highlight {
+  background-color: rgb(var(--color-highlight));
+}
+
+.text-highlight {
+  color: rgb(var(--color-highlight));
+}
+
+.border-highlight {
+  border-color: rgb(var(--color-highlight));
+}
