fix: TOC link color if active

--- a/src/scss/05_components/_components.toc.scss
+++ b/src/scss/05_components/_components.toc.scss
@@ -240,7 +240,8 @@ html:not([class*="lia-theme-default"]) {
           background-color: rgb(var(--lia-white));
         }
 
-        &.lia-active {
+        &.lia-active,
+        &.lia-active > * {
           color: rgb(var(--color-highlight-menu));
 
           &:before {
