fix: support menu width (max-content)

--- a/src/scss/05_components/_components.support-menu.scss
+++ b/src/scss/05_components/_components.support-menu.scss
@@ -187,7 +187,9 @@
       padding: 1.4rem;
       position: absolute;
       top: 5.9rem;
-      width: auto;
+      width: -webkit-max-content;
+      width: -moz-max-content;
+      width: max-content;
       z-index: 10;
 
       &.active {
