fix(Modal): Working again for scripts
Also changed the structure a bit. Class lia-modal__outer is now below
inner to support on click events for closing ...

--- a/src/scss/05_components/_components.modal.scss
+++ b/src/scss/05_components/_components.modal.scss
@@ -46,6 +46,7 @@ $controlHeight: 4rem;
     text-align: right;
     top: 0;
     width: 100%;
+    z-index: 9001;
 
     @include breakpoint("sm") {
       margin: 0;
@@ -62,6 +63,7 @@ $controlHeight: 4rem;
     height: $controlHeight;
     justify-content: space-between;
     width: 100%;
+    z-index: 9001;
 
     @include breakpoint("sm") {
       position: absolute;
@@ -113,6 +115,7 @@ $controlHeight: 4rem;
 
     > * {
       margin: 0;
+      z-index: 9001;
     }
   }
 
