fix: iOS safari bugs
pagination is now visible

--- a/src/scss/05_components/_components.gallery.scss
+++ b/src/scss/05_components/_components.gallery.scss
@@ -16,18 +16,8 @@
     height: 25rem;
     display: inline-block;
 
-    img {
-      height: 100%;
-      object-fit: cover;
-      width: 100%;
-    }
-
-    video {
-      height: 100%;
-      object-fit: cover;
-      width: 100%;
-    }
-
+    img,
+    video,
     div {
       height: 100%;
       object-fit: cover;
