--- a/src/scss/05_components/_components.modal.scss
+++ b/src/scss/05_components/_components.modal.scss
@@ -5,7 +5,7 @@ $controlHeight: 4rem;
   color: white;
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  height: 100%;
   justify-content: center;
   left: 0;
   pointer-events: auto;
