--- a/src/scss/05_components/_components.support-menu.scss
+++ b/src/scss/05_components/_components.support-menu.scss
@@ -122,6 +122,13 @@
       }
     }
 
+    // safari fix of container width
+    &--info .lia-support-menu__submenu {
+      width: -webkit-max-content;
+      width: -moz-max-content;
+      width: max-content;
+    }
+
     @include breakpoint("sm") {
       padding: 1.8rem 0.75rem;
     }
@@ -151,7 +158,7 @@
     position: relative;
     right: 0;
     top: 0;
-    width: 100%;
+    width: auto;
 
     @at-root html.lia-variant-dark & {
       background-color: rgb(var(--lia-grey-dark));
@@ -187,9 +194,6 @@
       padding: 1.4rem;
       position: absolute;
       top: 5.9rem;
-      width: -webkit-max-content;
-      width: -moz-max-content;
-      width: max-content;
       z-index: 10;
 
       &.active {
