fix: removed bottom margin for lia-code--inline

--- a/src/scss/03_elements/_elements.code.scss
+++ b/src/scss/03_elements/_elements.code.scss
@@ -11,6 +11,7 @@
   &--inline {
     border: 1px solid rgb(var(--color-highlight-dark));
     color: rgb(var(--color-highlight-dark));
+    margin-bottom: 0;
     padding: 0 0.5rem;
   }
 
