improve: Floating image in paragraph only 1. child

--- a/src/scss/03_elements/_elements.text.scss
+++ b/src/scss/03_elements/_elements.text.scss
@@ -4,7 +4,7 @@ strong {
 }
 
 .lia-paragraph {
-  figure {
+  > figure:first-child {
     max-width: 50%;
     float: left;
     margin: 0 2rem 2rem 0;
